--- a/package.json
+++ b/package.json
@@ -31,6 +31,9 @@
     "@types/cors": "^2.8.19",
     "@types/nanoid": "^3.0.0",
     "bcrypt": "^6.0.0",
+    "class-transform": "^0.7.1",
+    "class-transformer": "^0.5.1",
+    "class-validator": "^0.14.2",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "nanoid": "^5.1.6",
